--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,11 @@
 }
 
 .instructionText {
-  text-align: center;
+  text-align: left;
+  font-size: 0.9rem;
+  line-height: 1.5;
   font-family: Poppins;
+  display: flex;
+  width: 750px;
+  margin: auto;
 }
